--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 <body>
     <div class="container">
         <h1>Teatro Español del Siglo de Oro</h1>
-        <p class="subtitle">Catálogo de obras, autores, representaciones y lugares</p>
+        <p class="subtitle">Catálogo de obras, autores, representaciones y lugares • Sincronización automática activa</p>
         
         <!-- Sección de Autenticación -->
         <div id="auth-section" style="margin-bottom: 25px; padding: 20px 25px; background: #f7f6f4; border-radius: 3px; border: 1px solid #e0ddd8;">
