statistics and 500 more titles

--- a/index.html
+++ b/index.html
@@ -763,6 +763,8 @@
                 <p class="subtitle" style="margin-bottom: 0;">Catálogo de obras, autores, representaciones y lugares • Sincronización automática activa</p>
                 <div class="quick-links">
                     <a href="comedia.html" id="link-comedia-toggle">Ver solo comedias</a>
+                    <span style="margin: 0 8px;">•</span>
+                    <a href="estadisticas.html">📊 Estadísticas y Análisis</a>
                 </div>
             </div>
             <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
